# FileServer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/acevizli/fileserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  auth_manager.cpp  auth_manager.h  file_manager.cpp  file_manager.h  http_server.cpp  http_server.h  native-lib.cpp  web_frontend.h
app/src/main/java/com/acevizli/fileserver/: FileServerService.kt  MainActivity.kt  NativeServer.kt  SharedFile.kt  SharedFilesAdapter.kt
app/src/main/res/drawable/: button_background.xml  button_outline.xml  ic_archive.xml  ic_audio.xml  ic_clear.xml  ic_document.xml  ic_file.xml  ic_image.xml  ic_pdf.xml  ic_server.xml  ic_video.xml  item_background.xml
app/src/main/res/layout/: activity_main.xml  item_shared_file.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/acevizli/fileserver/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
